add condition to better understand

--- a/angle_try.ipynb
+++ b/angle_try.ipynb
@@ -22,6 +22,8 @@
     "\n",
     "Reorder: $\\cos\\nu=\\frac{a(1-e^2)-r}{er}=\\frac{-\\frac{1}{v^2r-2GM}\\frac{(2GM-rv^2)rv^2\\cos^2(\\theta)}{GM}-1}{e}$\n",
     "\n",
+    "Because $0^\\circ \\le \\theta \\le 90^\\circ$, and $0^\\circ\\le\\nu\\le 90^\\circ$, So can directly use $\\cos(\\theta),\\cos(\\nu)$ to do derivation.\n",
+    "\n",
     "To achieve maximum distance, we should let $\\nu$ be smallest. $\\frac{\\partial\\cos(\\nu)}{\\partial\\cos(\\theta)}=0$\n",
     "\n",
     "Solve that we get: $C_1=rv^3/GM,C_2=\\frac{(rv^2-2GM)rv^2}{(GM)^2}$\n",
