--- a/angle_try.ipynb
+++ b/angle_try.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "Solve that we get: $C_1=rv^3/GM,C_2=\\frac{(rv^2-2GM)rv^2}{(GM)^2}$\n",
     "\n",
-    "So: $\\cos(\\theta)=\\sqrt{\\frac{-2C1+C2}{C1C2}}$\n",
+    "So: $\\cos(\\theta)=\\sqrt{\\frac{-2C1-C2}{C1C2}}$\n",
     "\n",
     "4300@150km"
    ]
