--- a/angle_try.ipynb
+++ b/angle_try.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "We have: $r=\\frac{a(1-e^2)}{1+e\\cos\\nu}$\n",
     "\n",
-    "$\\nu$ is True anomaly.\n",
+    "$\\nu$ is True anomaly. And the distance we throw is $R*2(180-\\nu)$, $R$ is Earth radius.\n",
     "\n",
     "Reorder: $\\cos\\nu=\\frac{a(1-e^2)-r}{er}=\\frac{-\\frac{1}{v^2r-2GM}\\frac{(2GM-rv^2)rv^2\\cos^2(\\theta)}{GM}-1}{e}$\n",
     "\n",
@@ -26,34 +26,36 @@
     "\n",
     "To achieve maximum distance, we should let $\\nu$ be smallest. $\\frac{\\partial\\cos(\\nu)}{\\partial\\cos(\\theta)}=0$\n",
     "\n",
-    "Solve that we get: $C_1=rv^3/GM,C_2=\\frac{(rv^2-2GM)rv^2}{(GM)^2}$\n",
+    "Solve that we get:\n",
     "\n",
-    "So: $\\cos(\\theta)=\\sqrt{\\frac{-2C1-C2}{C1C2}}$\n",
+    "$\\cos(\\theta)=\\sqrt{\\frac{-2C_1-C_2}{C_1C_2}}$\n",
+    "\n",
+    "where: $C_1=\\frac{rv^3}{GM},C_2=\\frac{(rv^2-2GM)rv^2}{(GM)^2}$\n",
     "\n",
     "4300@150km"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# constants\n",
-    "G = 6.67430e-11\n",
-    "M = 5.972e24\n",
-    "R = 6371000\n",
-    "GM = G*M"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
-    "\n",
+    "# constants\n",
+    "G = 6.67430e-11\n",
+    "M = 5.972e24\n",
+    "R = 6371000\n",
+    "GM = G*M\n",
+    "r2d = 180.0/math.pi # radius to degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_throw_result(v: float):\n",
     "    C1 = R*v*v / GM\n",
     "    C2 = (R*v*v-2*GM)*R*v*v/GM/GM\n",
@@ -77,56 +79,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "angle:  35.24385558330361\n",
-      "usefv:  4986.694703808344\n",
-      "dista:  4339335.050993104\n",
+      "angle:  38.03482497439135\n",
+      "usefv:  4927.30330120239\n",
+      "dista:  3097968.5041562472\n",
       "\n",
-      "angle:  37.81954831737991\n",
-      "usefv:  4936.277539773352\n",
-      "dista:  3193719.192494961\n",
-      "\n",
-      "angle:  38.00264789654439\n",
-      "usefv:  4932.738927591145\n",
-      "dista:  3112280.21539959\n",
-      "\n",
-      "angle:  38.01535038479085\n",
-      "usefv:  4932.4936701399\n",
-      "dista:  3106630.4064045036\n",
-      "\n",
-      "angle:  38.01623006526444\n",
-      "usefv:  4932.476686543075\n",
-      "dista:  3106239.1423815866\n",
-      "\n",
-      "velocity after cutoff:  4547.546586132911\n"
+      "velocity after cutoff:  4542.18210394037\n",
+      "height after cutoff:  191262.34551806326\n",
+      "Maximum height:  673195.8559887363\n",
+      "Horizontal speed:  4404.719055898294\n",
+      "2208.340521895664\n"
      ]
     }
    ],
    "source": [
-    "v_ori = 5600*math.cos(math.pi/180*1.8)\n",
-    "acc_time = 70+56\n",
+    "v_ori = 5600 * math.cos(3/r2d)      # total dv * steering losses\n",
+    "acc_time = 70+56                    # two stage burning time\n",
     "\n",
+    "# because gravity will pull the angle down\n",
+    "# so we need to raise up angle\n",
     "iter_v = v_ori\n",
-    "for _ in range(5):\n",
+    "for _ in range(10):\n",
     "    theta, dis = get_throw_result(iter_v)\n",
     "    iter_v_y = v_ori*math.sin(theta)-(acc_time * GM/R/R)\n",
     "    iter_v_x = v_ori*math.cos(theta)\n",
     "    iter_v = math.sqrt(iter_v_x*iter_v_x+iter_v_y*iter_v_y)\n",
     "\n",
-    "    print(\"angle: \", theta/math.pi*180)\n",
-    "    print(\"usefv: \", iter_v)\n",
-    "    print(\"dista: \", dis)\n",
-    "    print()\n",
+    "print(\"angle: \", theta*r2d)\n",
+    "print(\"usefv: \", iter_v)\n",
+    "print(\"dista: \", dis)\n",
+    "print()\n",
     "\n",
     "hh = 1/2*(iter_v*math.sin(theta)*acc_time)\n",
     "high_v = math.sqrt(2*(iter_v*iter_v/2-GM/R+GM/(R+hh)))\n",
-    "print(\"velocity after cutoff: \", high_v)"
+    "print(\"velocity after cutoff: \", high_v)\n",
+    "print(\"height after cutoff: \", hh)\n",
+    "\n",
+    "C2 = (R*iter_v*iter_v-2*GM)*R*iter_v*iter_v/GM/GM\n",
+    "a = -GM*R/(iter_v*iter_v*R-2*GM)\n",
+    "costheta = math.cos(theta)\n",
+    "ecc = math.sqrt(1+C2*costheta*costheta)\n",
+    "print(\"Maximum height: \", a*(1+ecc)-R)\n",
+    "print(\"Horizontal speed: \", iter_v_x)\n",
+    "# Be aware that this is the optimal answer that ignore\n",
+    "# air drags and steering losses is an approximate value"
    ]
   }
  ],
