--- a/angle_try.ipynb
+++ b/angle_try.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -93,8 +93,7 @@
       "velocity after cutoff:  4542.18210394037\n",
       "height after cutoff:  191262.34551806326\n",
       "Maximum height:  673195.8559887363\n",
-      "Horizontal speed:  4404.719055898294\n",
-      "2208.340521895664\n"
+      "Horizontal speed:  4404.719055898294\n"
      ]
     }
    ],
